k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sindacms-deploy
  labels:
    app: sindacms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sindacms
  template:
    metadata:
      labels:
        app: sindacms
    spec:
      containers:
        - name: sindacms
          image: sindatestfour.azurecr.io/sindacmstestfourapp
          imagePullPolicy: Always
          ports:
          - containerPort: 80
      imagePullSecrets:
      - name : azcrcred
