k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sindacmsservice
spec:
  selector:
    app: sindacms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
